refactor(common): 核心降级 Java 8 源码（单一真源，为 1.16.5 变体铺路）
把 mods/common（main+test）全量降级到 Java 8 源码：record→final class、文本块→拼接、
arrow-switch/instanceof 模式/var 脱糖、String.isBlank→trim().isEmpty()、
HttpClient→HttpURLConnection、List/Map/Set.of→Arrays/Collections、Files.read/writeString
等 Java 9+ 用法替换。Java 8 源在 JDK 17/21/25 照常编译，其余十变体不受影响（不分叉）。
真 JDK 8 javac 编译 + 全单测 + Forge 1.20.1 build 三重验证通过。

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>